get all needs details added
